<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ChatDiscussion">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/top_layout_discussion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="0"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <ImageView
                android:id="@+id/seconduser_pic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/fullname_conversation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:paddingHorizontal="15dp"
            android:paddingBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/top_layout_discussion" />


        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingVertical="10dp"
            android:paddingBottom="10dp">

            <EditText
                android:id="@+id/edittext_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_weight="9"
                android:hint="@string/write_your_message" />

            <Button
                android:id="@+id/button_send_message_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/send"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/noconversation_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_conversation"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout5" />


</androidx.constraintlayout.widget.ConstraintLayout>