<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MyReservationRestaurant">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_my_reservation">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="30dp">


                <ImageView
                    android:id="@+id/imageview_pic_restaurant_mylunch"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:background="@color/white"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout_mylunch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:background="@color/colorPrimary"
                    android:paddingHorizontal="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageview_pic_restaurant_mylunch">

                    <TextView
                        android:id="@+id/textview_name_restaurant_mylunch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxWidth="250dp"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RatingBar
                        android:id="@+id/ratingBar_mylunch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numStars="3"
                        android:progressBackgroundTint="@color/colorPrimaryDark"
                        android:progressTint="@color/gold"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        app:layout_constraintStart_toEndOf="@+id/textview_name_restaurant_mylunch"
                        app:layout_constraintTop_toTopOf="@+id/textview_name_restaurant_mylunch"
                        app:layout_constraintBottom_toBottomOf="@+id/textview_name_restaurant_mylunch"/>

                    <TextView
                        android:id="@+id/address_restaurant_mylunch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textview_name_restaurant_mylunch" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2_mylunch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"

                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout_mylunch">

                    <include
                        android:id="@+id/call_buttondetail_mylunch"
                        layout="@layout/call_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <include
                        android:id="@+id/like_buttondetail_mylunch"
                        layout="@layout/like_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <include
                        android:id="@+id/web_buttondetail_mylunch"
                        layout="@layout/website_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2_mylunch">

                    <ImageView
                        android:id="@+id/pricy1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/pricy_restaurant_icons" />

                    <ImageView
                        android:id="@+id/pricy2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/pricy_restaurant_icons" />

                    <ImageView
                        android:id="@+id/pricy3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/pricy_restaurant_icons" />
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                   android:layout_marginTop="30dp"
                    app:cardCornerRadius="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <Button
                        android:id="@+id/button_myreservation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorAccent"
                        android:text="@string/cancel_reservation"
                        android:textColor="@color/white" />


                </androidx.cardview.widget.CardView>



            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <TextView
            android:id="@+id/noreservation_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_reservation_yet"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="@+id/scrollView2"
            android:visibility="gone"/>


        <TextView
            android:id="@+id/textview_my_reservation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingVertical="10dp"
            android:text="@string/we_are_eating_there_today"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />





    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>